# playWithMe

./: .gitignore  README.md  playWithMe.cabal  stack.yaml
server/: server.cabal
server/src/: Main.hs
src/: Game.hs  Main.hs  Router.hs  TypesGame.hs  TypesGameInput.hs  TypesGameOutput.hs  TypesInput.hs  TypesOutput.hs
web/: index.html  index.js  package-lock.json  package.json
web/css/: styles.css
web/src/: index.js
