name:                playWithMe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ezemtsov/playWithMe#readme
license:             BSD3
license-file:        LICENSE
author:              Evgeny Zemtsov
maintainer:          eugene.zemtsov@gmail.com
copyright:           2019 Evgeny Zemtsov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , websockets
                     , bytestring
                     , text
                     , aeson
                     , scotty
                     , wai-middleware-static
                     , containers